Bug 168497 - [26.2] Crash LibreOffice Calc when opening the Data Provider
Summary: [26.2] Crash LibreOffice Calc when opening the Data Provider
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:26.2.0
Keywords: haveBacktrace, regression
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2025-09-21 06:11 UTC by Takenori Yasuda
Modified: 2025-09-30 13:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2025-09-21 06:11:51 UTC
Description:
When I tried to open the Data Provider, Calc crashed.

This occurs whether the Calc file is new or existing, and even when restarting in Safe Mode.

Steps to Reproduce:
1.Open the Data Provider (Data > Data Provider).

Actual Results:
LibreOffice Calc crashes.

Expected Results:
Open the Data Provider without crashing Calc.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9ee57c6ac279cf3ea25f1598de6deab6e2d6735a
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 1 Julien Nabet 2025-09-21 08:54:41 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

part of bt:
#0  ScViewData::GetSheetViewID (this=0x8) at sc/source/ui/inc/viewdata.hxx:420
#1  0x00007f46f3aac5e0 in ScHeaderControl::Paint (this=0x55cbb71c0500, rRect=...) at /home/julien/lo/libreoffice/sc/source/ui/view/hdrcont.cxx:324
Comment 2 Julien Nabet 2025-09-21 08:56:39 UTC
Patch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/191281
Comment 3 Commit Notification 2025-09-21 10:47:41 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/67f0f999ad76ca5398e8c678efd01195bb180e65

tdf#168497: fix crash when opening data provider

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2025-09-21 10:52:24 UTC
Regression from 3b89969c60e44110a07b12c92c538b310f17ab1b
sc: make sheet view have different header colors
Comment 5 Julien Nabet 2025-09-21 10:53:22 UTC
The regression was only on master branch, let's put this one to FIXED.
Comment 6 Commit Notification 2025-09-30 13:32:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f631a1cd933b26624bc71ef9f5b193b44bc2b79f

tdf#168497, tdf#165658: sc: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.