tdf#168497: fix crash when opening data provider

Regression from 3b89969c60e44110a07b12c92c538b310f17ab1b
sc: make sheet view have different header colors

bt:
ScViewData::GetSheetViewID (this=0x8) at sc/source/ui/inc/viewdata.hxx:420
0x00007f46f3aac5e0 in ScHeaderControl::Paint (this=0x55cbb71c0500, rRect=...)
at /home/julien/lo/libreoffice/sc/source/ui/view/hdrcont.cxx:324

Change-Id: Id6554015cdfe53bbf86da50a206941a793f0457b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191281
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>